# levitics-arkhe-gcs

./: .gitignore  .gitlab-ci.yml  .gitmessage  CMakeLists.txt  ISSUE_TEMPLATE.md  LICENSE.md  README.md
.github/: ISSUE_TEMPLATE.md
nbproject/: configurations.xml  project.xml
osgi/: CMakeLists.txt
osgi/src/it/: CMakeLists.txt
osgi/src/main/cpp/: CMakeLists.txt
osgi/src/main/cpp/levitics/arkhe/gcs/osgi/core/: AbstractObject.cpp  AbstractObject.hpp  Cpuid.cpp  Cpuid.hpp  LinearValueProxy.cpp  LinearValueProxy.hpp  OSGIApplication.cpp  OSGIApplication.hpp  PimplPtr.cpp  PimplPtr.hpp  Settings.cpp  Settings.hpp  SharedPimplPtr.cpp  SharedPimplPtr.hpp  ValueProxy.cpp  ValueProxy.hpp
osgi/src/main/cpp/levitics/arkhe/gcs/osgi/core/edac/: BackTrace.cpp  BackTrace.hpp  Demangler.cpp  Demangler.hpp  Exception.cpp  Exception.hpp
osgi/src/main/cpp/levitics/arkhe/gcs/osgi/core/edac/private/: BackTracePrivate.cpp  BackTracePrivate.hpp
osgi/src/main/cpp/levitics/arkhe/gcs/osgi/core/logger/: LogModel.cpp  LogModel.hpp  LogView.cpp  LogView.hpp  LogViewBar.cpp  LogViewBar.hpp  LogViewList.cpp  LogViewList.hpp  LogViewTree.cpp  LogViewTree.hpp  Logger.cpp  Logger.hpp
osgi/src/main/cpp/levitics/arkhe/gcs/osgi/core/logger/private/: LogModelPrivate.cpp  LogModelPrivate.hpp  LogViewPrivate.cpp  LogViewPrivate.hpp  LoggerPrivate.cpp  LoggerPrivate.hpp
osgi/src/main/cpp/levitics/arkhe/gcs/osgi/core/private/: AbstractObjectPrivate.cpp  AbstractObjectPrivate.hpp  ApplicationPrivate.cpp  ApplicationPrivate.hpp  CpuidPrivate.cpp  CpuidPrivate.hpp  LinearValueProxyPrivate.cpp  LinearValueProxyPrivate.hpp  OSGIApplicationPrivate.cpp  OSGIApplicationPrivate.hpp  ValueProxyPrivate.cpp  ValueProxyPrivate.hpp
osgi/src/main/cpp/levitics/arkhe/gcs/osgi/core/widgets/style/: Style.cpp  Style.hpp
osgi/src/main/cpp/levitics/arkhe/gcs/osgi/core/workflow/: ForwardAndBackwardSteps.cpp  ForwardAndBackwardSteps.hpp  Workflow.cpp  Workflow.hpp  WorkflowInterstepTransition.cpp  WorkflowInterstepTransition.hpp  WorkflowInterstepTransitionEvent.cpp  WorkflowInterstepTransitionEvent.hpp  WorkflowIntrastepTransition.cpp  WorkflowIntrastepTransition.hpp  WorkflowIntrastepTransitionEvent.cpp  WorkflowIntrastepTransitionEvent.hpp  WorkflowStep.cpp  WorkflowStep.hpp
osgi/src/main/cpp/levitics/arkhe/gcs/osgi/core/workflow/private/: WorkflowPrivate.cpp  WorkflowPrivate.hpp  WorkflowStepPrivate.cpp  WorkflowStepPrivate.hpp
osgi/src/test/cpp/: CMakeLists.txt
osgi/src/test/cpp/levitics/arkhe/gcs/osgi/: CMakeLists.txt
osgi/src/test/cpp/levitics/arkhe/gcs/osgi/core/: PimplPtrTest.cpp  PimplPtrTest.hpp  SharedPimplPtrTest.cpp  SharedPimplPtrTest.hpp
osgi/src/test/cpp/levitics/arkhe/gcs/osgi/core/edac/: BackTrace.cpp  BackTrace.hpp  BackTraceTest.cpp  BackTraceTest.hpp  Demangler.cpp  Demangler.hpp  DemanglerTest.cpp  DemanglerTest.hpp  Exception.cpp  Exception.hpp  ExceptionTest.cpp  ExceptionTest.hpp
osgi/src/test/cpp/levitics/arkhe/gcs/osgi/core/edac/private/: BackTracePrivate.cpp  BackTracePrivate.hpp
osgi/src/test/cpp/levitics/arkhe/gcs/osgi/core/logger/: LoggerTest.cpp  LoggerTest.hpp
osgi/src/test/cpp/levitics/arkhe/gcs/osgi/core/private/: PimplPtrTestPrivate.cpp  PimplPtrTestPrivate.hpp  SharedPimplPtrTestPrivate.cpp  SharedPimplPtrTestPrivate.hpp
osgi/src/test/cpp/levitics/arkhe/gcs/osgi/core/workflow/: WorkflowStepMock.cpp  WorkflowStepMock.hpp  WorkflowStepSignals.cpp  WorkflowStepSignals.hpp  WorkflowTest.cpp  WorkflowTest.hpp
osgi/src/test/cpp/levitics/arkhe/gcs/osgi/core/workflow/private/: WorkflowStepMockPrivate.cpp  WorkflowStepMockPrivate.hpp  WorkflowStepSignalsPrivate.cpp  WorkflowStepSignalsPrivate.hpp
src/it/: CMakeLists.txt
src/it/levitics/arkhe/gcs/features/: exemple.feature  logging.feature
src/it/levitics/arkhe/gcs/features/step_definitions/: step_definitions.cpp
src/main/cpp/: CMakeLists.txt  main.cpp
src/main/cpp/levitics/: Defines.hpp  gcsExport.hpp
src/main/cpp/levitics/app/: Api.hpp  AppInfo.hpp  Defines.hpp  GCSApplication.cpp  GCSApplication.hpp  MultiScreenManagement.cpp  MultiScreenManagement.hpp  Version.cpp  Version.hpp  View.cpp  View.hpp  mainwindow.cpp  mainwindow.hpp
src/main/cpp/levitics/app/private/: GCSApplicationPrivate.cpp
src/main/cpp/levitics/arkhe/gcs/: Application.cpp  Application.hpp  EnvironmentVariablesManager.cpp  EnvironmentVariablesManager.hpp
src/main/cpp/levitics/arkhe/gcs/app/: Defines.hpp  GCSApplication.cpp  GCSApplication.hpp  Mainwindow.cpp  Mainwindow.hpp  MultiScreenManagement.cpp  MultiScreenManagement.hpp  ScreensDimensions.cpp  ScreensDimensions.hpp  Version.cpp  Version.hpp  View.cpp  View.hpp
src/main/cpp/levitics/arkhe/gcs/app/logger/: Logger.cpp  Logger.hpp
src/main/cpp/levitics/arkhe/gcs/app/logger/private/: LoggerPrivate.cpp  LoggerPrivate.hpp
src/main/cpp/levitics/arkhe/gcs/app/private/: GCSApplicationPrivate.cpp  GCSApplicationPrivate.hpp  MainWindowPrivate.cpp  MainWindowPrivate.hpp
src/main/cpp/levitics/arkhe/gcs/errors-handling/: Backtrace.cpp  Backtrace.hpp  Demangler.cpp  Demangler.hpp  Exceptions.cpp  Exceptions.hpp  readme
src/main/cpp/levitics/arkhe/gcs/widgets/: StatusIndicator.cpp  StatusIndicator.hpp
src/main/cpp/levitics/arkhe/gcs/widgets/splashscreen/: SplashScreen.cpp  SplashScreen.hpp  splashscreen.ui
src/main/cpp/levitics/osgi/: CMakeLists.txt
src/main/cpp/levitics/osgi/core/error-handling/: Demangler.cpp  Exception.cpp
src/main/cpp/levitics/osgi/core/error-handling/private/: BackTracePrivate.cpp  BackTracePrivate.hpp
src/main/cpp/levitics/osgi/core/logger/: Logger.cpp  Logger.hpp
src/main/cpp/levitics/osgi/core/logger/private/: LoggerPrivate.cpp
src/main/fsm/: gcs.scxml
src/main/resources/: Requirements.txt  coding.style  fsm.qrc
src/main/resources/I18n/: Translation_cn.ts  Translation_en.ts  (+3 more)
src/main/scripts/: mvnrelease.sh
src/test/cpp/: CMakeLists.txt  GcsTest.cpp  GcsTest.hpp  runTest.cpp
src/test/cpp/levitics/arkhe/gcs/: ApplicationTest.cpp  ApplicationTest.hpp
src/test/cpp/levitics/arkhe/gcs/app/: GCSApplicationTest.cpp  GCSApplicationTest.hpp
(+77 files in other folders)
